@@ -1,3 +1,7 @@
+2010-07-22	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* summarize_changes: made summary string length also for
+	  added/removed files dynamic
+
 2010-07-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Fixed typo in aide.conf man page
 	* summarize_changes: made length of summary string dynamic
